@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
+<ModSyncNinjaData>
+	<ID>6dc098c6-36ab-4e55-a61b-93e8bdbc1c16</ID>
+	<ModName>[sd] luciferium production</ModName>
+	<Version>b18-1.0.0</Version>
+	<SaveBreaking>false</SaveBreaking>
+</ModSyncNinjaData>
